fixed intranet dropdown overflow

--- a/app.css
+++ b/app.css
@@ -766,7 +766,7 @@ h3 {
   .general .ddContent.show {
     opacity: 1;
     margin: 1em 0;
-    max-height: 200px;
+    max-height: 250px;
     padding: 1em;
     transition: all 0.3s ease-out;
   }
